# libwheel

./: .clang-format  .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md
.github/workflows/: ctest.yml
include/: CMakeLists.txt  README.md  wheel.h
include/wheel/: README.md  binary_search_tree.h  bst.h  eht.h  macros.h  optional.h  stack.h  vec.h  wheel.h
include/wheel/bst/: def.h  header.h  impl.h
include/wheel/containers/: README.md
include/wheel/def/: bst.h  eht.h  interface.h  optional.h  stack.h  vec.h  wheel.h
include/wheel/eht/: def.h  impl.h
include/wheel/interface/: def.h  header.h  undef.h
include/wheel/linked_list/: def.h  header.h  impl.h  undef.h
include/wheel/misc/: bitops.h  macros.h  warnings.h
include/wheel/optional/: def.h  impl.h
tests/: CMakeLists.txt  bitops.c  bst_int.c  bst_string.c  eht_int.c  main.c  stack_int.c  string.c  trie_int.c  vec_int.c
tests/bst/: bst_int_insert.c  bst_string_search.c
tests/concrete/: binary_tree_int.h  binary_tree_string.h  bst_int.h  bst_string.h  int.h  optional_int.h  optional_string.h  stack_int.h  string.h  vec_int.h
tests/eht/: eht_int_search.c
tests/impl/: int.h  string.h  vec_int.h
tests/linked_list/: ll_int_append.c  ll_int_prepend.c  ll_set.c
tests/rc/: rc_string_copy.c
tests/stack/: stack_int_push.c
tests/trie/: trie_int_search.c
tests/vec/: vec_bit.c  vec_int.c  vec_int_filter.c  vec_int_get.c  vec_int_grow.c  vec_int_head.c  vec_int_head_ptr.c  vec_int_iter.c  vec_int_last.c  vec_int_last_ptr.c  vec_int_map.c  vec_int_serialize_json.c  vec_vec_int_init.c
(+56 files in other folders)
